<resources>
    <string name="app_name">HIAAC</string>
    <string name="app_version">Version v2.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="server_time">Server Time: </string>
    <string name="local_time">Local Time: </string>
    <string name="time_diff">Server diff from local: </string>
    <string name="csv_files">Files:</string>
    <string name="creating_csv_file">Creating CSV File . . .</string>
    <string name="before_create_csv_file">Finishing getting data to create CSV file. Please wait . . .</string>
    <string name="starting_upload_file">Starting Upload . . .</string>
    <string name="share_with_firebase">Would you like to send data to Firebase Server?</string>
    <string name="share_with_firebase_title">Send to Firebase.</string>
    <string name="share_with_server">Would you like to send data to IC Server?</string>
    <string name="share_with_server_no_files">There are no files to be shared!</string>
    <string name="share_with_server_title">Send to IC Server.</string>
    <string name="download_progress">Uploading . . .  %1$d%%</string>
    <string name="success">Success</string>
    <string name="success_csv_file">CSV file successfully created</string>
    <string name="success_csv_uploaded_firebase">CVS file successfully uploaded to Firebase</string>
    <string name="error_no_data_create_csc">There was any data to create a CSV file!</string>
    <string name="error_no_data_upload_firebase">There was any data to upload to Firebase server!</string>
    <string name="dont_use_gps">Don\'t use GPS</string>
    <string name="dont_use_audio">Don\'t use MIC</string>
    <string name="gps_ok">Ok, I understand</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_new_frequency_title">Add Frequency</string>
    <string name="add_new_frequency_msg">Choose a new frequency to be added</string>
    <string name="gps_permission_description">To use GPS sensor, application needs the Background permission. If you want to use GPS, please select the Always Use permission.</string>
    <string name="audio_permission_description">To record audio, application needs the Background permission. If you want to record audio, please select the Always Use permission.</string>
    <string name="sensor_not_available">This Sensor (%s) is not available on this device!</string>
    <string name="too_many_sensors_checked">Using too many sensors at same time may cause data loss due to Android limitations.</string>
    <string name="dialog_alert_title">ALERT!</string>

    <!-- Notifications -->
    <string name="experiment_finished_title">Finished Experiment!</string>
    <string name="experiment_finished_description">The Experiment %s has been finished!</string>
    <string name="experiment_timer_title">The experiment will start in . . .</string>


    <string name="label">Label</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit">Edit</string>
    <string name="label_title">Experiment title</string>
    <string name="choose_experiment">Choose an experiment</string>
    <string name="activity_title">Activity</string>
    <string name="delete_label">Delete label</string>
    <string name="load_config">Load Config</string>
    <string name="stops_at">Stops after:</string>
    <string name="device_location">Device Location:</string>
    <string name="device_location_add">Add new location</string>
    <string name="user_id">User Id</string>
    <string name="not_editable_warn">Experiment contain collected data. Some fields are not editable.</string>
    <string name="send_files_to_server">Send files to server</string>
    <string name="delete_config_confirmation">Would you like to delete this configuration?</string>
    <string name="save_config_on_server_confirmation">Would you like to save this configuration on server?</string>
    <string name="delete_config_title">Delete Configuration</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="configuration_deleted">Configuration deleted</string>
    <string name="label_title_empty">Experiment title is empty</string>
    <string name="activity_title_empty">Activity is empty</string>
    <string name="user_id_empty">User ID is empty</string>
    <string name="frequency_not_set">The frequency of %1$s was not set!</string>
    <string name="any_sensor_selected">You should select at least 1 sensor</string>
    <string name="schedule_time">Schedule:</string>
    <string name="schedule_time_hint">Automatic start time</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_period">Period:</string>
    <string name="statistics_device_info">Device:</string>
    <string name="statistics_timeframe">Time frame:</string>
    <string name="statistics_valid_data">Valid:</string>
    <string name="statistics_expected_data">Expected:</string>
    <string name="statistics_collected_data">Collected:</string>
    <string name="statistics_invalid_data">Discarded:</string>
    <string name="statistics_timestamp_average">Average:</string>
    <string name="statistics_max_timestamp_difference">Max diff:</string>
    <string name="statistics_min_timestamp_difference">Min diff:</string>
    <string name="statistics_collect_timestamp">Time frame details:</string>
    <string name="statistics_samples">Samples:</string>
    <string name="statistics_time">Clock used:</string>
    <string name="conflict">CONFLICT</string>


    <string name="delete_experiment_file_title">Delete File</string>
    <string name="delete_experiment_file">Would you like to delete this file? (%s)</string>

    <string name="settings_upload_title">File upload</string>
    <string name="settings_upload_summary">Choose where collected data should be sent.</string>

    <string name="settings_server">Environment</string>
    <string name="settings_server_address">Destination</string>
    <string name="settings_server_config">Server Config</string>
    <string name="settings_custom_server_config">Custom Sever Config</string>
    <string name="settings_custom_server_dialog_title">Custom Address</string>
    <string name="settings_custom_server_dialog_message">Put server IP and port (IP:Port)</string>

    <string name="settings_collect_title">Collect config</string>
    <string name="settings_collect_summary">Options to customize the collect process.</string>

    <string name="settings_counter">Counter time</string>
    <string name="settings_counter_summary">Value in seconds:</string>
    <string name="settings_counter_key">Start Collect Config</string>
    <string name="settings_device_locations">Device Locations</string>

    <string name="preferences_run_checking">Checking</string>

    <string name="camera_dialog_title">Alert!</string>
    <string name="camera_dialog_msg">Already contains a video.\nNew record will replace the existing one.</string>
    <string name="camera_dialog_btn">Ok</string>

    <string name="stop_filming_msg">Confirm Stop?</string>

    <string-array name="device_location_items">
        <item>Mão Direita</item>
        <item>Mão Esquerda</item>
        <item>Braço Direito</item>
        <item>Braço Esquerdo</item>
        <item>Bolso Direito</item>
        <item>Bolso Esquerdo</item>
        <item>Perna Direita</item>
        <item>Perna Esquerda</item>
        <item>Mochila</item>
        <item>Anotador</item>
        <item>Vídeo</item>
    </string-array>
</resources>