<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/statistics_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Sensor" />

        <TextView
            android:id="@+id/sensor_frequency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            tools:text=" (1000 Hz)" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_elements"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textSize="14sp"
            android:text="@string/statistics_time" />

        <TextView
            android:id="@+id/usingServerTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:textSize="14sp"
            tools:text="Server Time" />
    </LinearLayout>

    <TextView
        android:id="@+id/sensor_samples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/statistics_samples"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_data" />

    <LinearLayout
        android:id="@+id/expected_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sensor_samples"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/statistics_expected_data" />

        <TextView
            android:id="@+id/sensor_expected_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:textColor="@color/black"
            tools:text="580" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collected_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expected_data"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/statistics_collected_data" />

        <TextView
            android:id="@+id/sensor_collected_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:textColor="@color/black"
            tools:text="580" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collected_data"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/statistics_valid_data" />

        <TextView
            android:id="@+id/sensor_valid_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:textColor="@color/blue"
            tools:text="560" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_invalid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_valid"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/statistics_invalid_data" />

        <TextView
            android:id="@+id/sensor_invalid_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:textColor="@color/red"
            tools:text="84" />
    </LinearLayout>


    <TextView
        android:id="@+id/sensor_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/statistics_collect_timestamp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_invalid"/>


    <LinearLayout
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sensor_timestamp"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/statistics_timeframe" />

        <TextView
            android:id="@+id/sensor_timeframe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            tools:text="01 min, 05 sec" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timestamp_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timestamp"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/statistics_timestamp_average" />

        <TextView
            android:id="@+id/sensor_timestamp_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            tools:text="10 ms" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timestamp_differences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timestamp_average"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/statistics_min_timestamp_difference" />

        <TextView
            android:id="@+id/min_timestamp_difference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            tools:text="11 ms" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/statistics_max_timestamp_difference" />

        <TextView
            android:id="@+id/max_timestamp_difference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            tools:text="21 ms" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>