<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datacollector.LabelOptionsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="52dp"
            android:ems="10"
            android:hint="@string/label_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/activity_txt"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:height="65dp"
            android:ems="10"
            android:hint="@string/activity_title"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:text="@string/stops_at"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/device_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:text="@string/device_location"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sensors_recycler_view"
        android:layout_width="460dp"
        android:layout_height="632dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_files_to_server_checkbox" />

    <EditText
        android:id="@+id/user_id_txt"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:height="52dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/device_location_spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/user_id"
        app:layout_constraintTop_toBottomOf="@+id/device_location_spinner" />

    <Spinner
        android:id="@+id/stops_at_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/device_location_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:entries="@array/device_location_items"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/stops_at_spinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="74dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:text="@string/user_id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/device_location" />

    <CheckBox
        android:id="@+id/send_files_to_server_checkbox"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_files_to_server"
        app:layout_constraintEnd_toEndOf="@+id/user_id_txt"
        app:layout_constraintTop_toBottomOf="@+id/user_id_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>