<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exp_card"
    layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <LinearLayout
            android:id="@+id/item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/label_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="@string/label"
                android:textSize="22sp"
                tools:text="label_title"
                card_view:layout_constraintEnd_toStartOf="@+id/label_timer"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_statistics"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:src="@drawable/ic_graph"
                android:padding="4dp"
                android:visibility="invisible"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintLeft_toRightOf="@id/label_device_location"
                card_view:layout_constraintTop_toBottomOf="@id/label_timer" />

            <TextView
                android:id="@+id/label_timer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:text="00:00:00"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/label_title" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_device_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label"
            android:textSize="16sp"
            tools:text="label_device_location"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/item_header"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintVertical_bias="0.0" />

        <br.org.eldorado.hiaac.datacollector.layout.AnimatedLinearLayout
            android:id="@+id/label_button_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/label_device_location">

            <LinearLayout
                android:id="@+id/animated_button_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:visibility="gone">

                <Button
                    android:id="@+id/start_sampling_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:layout_weight="25"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/stop_sampling_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_weight="25"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/stop" />

                 <Button
                     android:id="@+id/edit_sampling_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:backgroundTint="?attr/colorButtonNormal"
                     android:layout_marginLeft="2dp"
                     android:layout_marginRight="2dp"
                     android:text="@string/edit"
                     android:textColor="@color/black"
                     card_view:iconTint="@color/black"
                     android:autoSizeTextType="uniform"
                     android:maxLines="1"
                     android:layout_weight="25" />

                 <ImageView
                     android:id="@+id/share_sampling_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:padding="4dp"
                     android:contentDescription="@string/delete_config_title"
                     android:src="@drawable/ic_baseline_share_24"
                     android:layout_weight="15" />

                 <ImageView
                     android:id="@+id/delete_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:padding="4dp"
                     android:contentDescription="@string/share_with_server"
                     android:src="@drawable/ic_baseline_delete_24"
                     android:layout_weight="10" />
             </LinearLayout>

             <TextView
                 android:id="@+id/label_csv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/csv_files"
                 android:textSize="16sp"
                 android:visibility="gone" />

             <LinearLayout
                 android:id="@+id/csv_panel"
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
                 android:orientation="vertical"
                 android:visibility="gone"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/label_button_container">

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/csvfiles_reclyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:nestedScrollingEnabled="false" />
             </LinearLayout>

         </br.org.eldorado.hiaac.datacollector.layout.AnimatedLinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>

 </androidx.cardview.widget.CardView>